# 6302makarovym

./: README.md  logging_config.json  pyproject.toml
data/: to_download.json
lab1/: download_painting.py  process_image.py
lab2/: lab2.py
lab3/: lab3.py
lab4/: lab4.py
src/makarovyam_6302_metetl.egg-info/: requires.txt
src/metetl/: __init__.py  cli.py  decorators.py  logging_config.py
src/metetl/analysis/: aggregations.py  data_to_download.py
src/metetl/images/: models.py  processing.py
